# stocktake

./: .gitignore  LICENSE  README.md  WHITEPAPER.md  pyproject.toml
src/stocktake/: __init__.py  audit.py  build.py  cli.py  concepts.py  crossings.py  emit.py  errors.py  extract.py  layout.py  metrics.py  schema.py
tests/: test_audit.py  test_crossings.py  test_emit.py  test_extract.py  test_layout.py  test_metrics.py  test_schema.py
tests/fixtures/: map.toml  model.py
